--- a/article/cn/commenttest.html
+++ b/article/cn/commenttest.html
@@ -78,7 +78,7 @@
         .comment-iframe {
             width: 100%;
             border: none;
-            min-height: 600px; /* 调整高度以适应内容 */
+            min-height: 600px; /* 调整高度以 adapt content */
         }
     </style>
 </head>
@@ -87,7 +87,7 @@
         <div class="content">
             <h1 id="article-title"></h1>
             <div id="article-content"></div>
-                </div>
+        </div>
         <!-- 嵌入的评论区域 -->
         <div class="comment-container">
             <iframe
@@ -130,14 +130,15 @@
         }
           function updateCommentIframeTheme() {
             const commentFrame = document.getElementById('commentFrame');
-             const currentTheme = document.documentElement.getAttribute('data-theme') || (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+              const currentTheme = document.documentElement.getAttribute('data-theme') || (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
             const currentLang = document.documentElement.lang || 'zh-CN';
-            commentFrame.src = `https://comment.joyance.page/embed/area/test-area?theme=${currentTheme}&lang=${currentLang}`;
+            commentFrame.src = `https://comment.joyance.page/embed/area/test-1?theme=${currentTheme}&lang=${currentLang}`;
         }
         window.addEventListener('message', function(event) {
+            console.log('Message Received:', event);
             if (event.data.type === 'iframe-resize' && event.origin === 'https://comment.joyance.page') {
              const iframe = document.getElementById('commentFrame');
-            if (event.data.id === 'test-area')
+            if (event.data.id === 'test-1')
                 resizeIframe(iframe, event.data.height);
             }
         });
