--- a/article/cn/aaab.html
+++ b/article/cn/aaab.html
@@ -78,7 +78,7 @@
         .comment-iframe {
             width: 100%;
             border: none;
-            min-height: 600px; /* 调整高度以适应内容 */
+            min-height: 600px; /* 调整高度以 adapt content */
         }
     </style>
 </head>
@@ -93,10 +93,9 @@
             <iframe
                 id="commentFrame"
                 class="comment-iframe"
-                src="https://comment.joyance.page/embed/area/test-area"
+                src="https://comment.joyance.page/embed/area/test-1"
                 frameborder="0"
-                allowtransparency="true"
-                onload="resizeIframe(this)">
+                allowtransparency="true">
             </iframe>
         </div>
     </div>
@@ -126,17 +125,23 @@
         }
 
         // 动态调整 iframe 高度
-        function resizeIframe(obj) {
-           setTimeout(() => {
-               obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
-            }, 200);
+        function resizeIframe(obj, height) {
+            obj.style.height = height + 'px';
         }
           function updateCommentIframeTheme() {
             const commentFrame = document.getElementById('commentFrame');
-            const currentTheme = document.documentElement.getAttribute('data-theme') || (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
-           const currentLang = document.documentElement.lang || 'zh-CN';
-            commentFrame.src = `https://comment.joyance.page/embed/area/test-area?theme=${currentTheme}&lang=${currentLang}`;
+              const currentTheme = document.documentElement.getAttribute('data-theme') || (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+            const currentLang = document.documentElement.lang || 'zh-CN';
+            commentFrame.src = `https://comment.joyance.page/embed/area/test-1?theme=${currentTheme}&lang=${currentLang}`;
         }
+        window.addEventListener('message', function(event) {
+            console.log('Message Received:', event);
+            if (event.data.type === 'iframe-resize' && event.origin === 'https://comment.joyance.page') {
+             const iframe = document.getElementById('commentFrame');
+            if (event.data.id === 'test-1')
+                resizeIframe(iframe, event.data.height);
+            }
+        });
 
         window.onload = function() {
             loadArticle();
