--- a/article/cn/aaaf.html
+++ b/article/cn/aaaf.html
@@ -93,7 +93,7 @@
             <iframe
                 id="commentFrame"
                 class="comment-iframe"
-                src="https://comment.joyance.page/embed/area/test-1"
+                src="https://comment.joyance.page/embed/area/aaaf"
                 frameborder="0"
                 allowtransparency="true">
             </iframe>
@@ -132,7 +132,7 @@
             const commentFrame = document.getElementById('commentFrame');
               const currentTheme = document.documentElement.getAttribute('data-theme') || (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
             const currentLang = document.documentElement.lang || 'zh-CN';
-            commentFrame.src = `https://comment.joyance.page/embed/area/test-1?theme=${currentTheme}&lang=${currentLang}`;
+            commentFrame.src = `https://comment.joyance.page/embed/area/aaaf?theme=${currentTheme}&lang=${currentLang}`;
         }
         window.addEventListener('message', function(event) {
             console.log('Message Received:', event);
