--- a/cn/index.html
+++ b/cn/index.html
@@ -393,6 +393,7 @@
                         <p>邮箱：me@joyance.page <button class="copy-button" onclick="copyToClipboard('me@joyance.page')">复制</button></p>
                         <p>session账号：<button class="copy-button" onclick="copyToClipboard('05d79f12671d1ca84d190a21c3417036ebd307c3668d4164d89969aa7bc443325a')">复制</button></p>
                         <p>𝕏 账号：@Xixiphus_Jiayue <button class="copy-button" onclick="copyToClipboard('@Xixiphus_Jiayue')">复制</button></p>
+                        <p><a href="https://comment.joyance.page/area/aaaa-cn" class="article-link">website(chinese)</a> </p>
                     </div>
                     <div class="card">
                         <h2>版本</h2>
