--- a/cn/index.html
+++ b/cn/index.html
@@ -380,13 +380,11 @@
                     </div>
                     <div class="card">
                         <h2>绕开过度审查</h2>
-                        <p>镜像网站(不要输入个人敏感信息)</p>
+                        <p>镜像网站(不要登录)</p>
                         <p>- 简单英语维基百科镜像网站｜<a href="https://s.joyance.page" class="article-link" target="_blank">前往</a></p>
                         <p>- 中文维基百科镜像网站｜<a href="https://w.joyance.page" class="article-link" target="_blank">前往</a></p>
-                        <p>- 谷歌搜索镜像网站｜<a href="https://google.joyance.page" class="article-link" target="_blank">前往</a></p>
                         <p>- Duckduckgo搜索镜像网站｜<a href="https://d.joyance.page" class="article-link" target="_blank">前往</a></p>
                         <p>- 全能镜像站｜<a href="https://proxy.joyance.page/" class="article-link" target="_blank">前往</a></p>
-                        <p>免费提供代理服务器，本人于BoosNet购买 | <a href="https://pt.joyance.page/" class="article-link" target="_blank">前往</a></p>
                     </div>
                     <div class="card">
                         <h2>联系</h2>
