--- a/article/cn/commenttest.html
+++ b/article/cn/commenttest.html
@@ -8,13 +8,13 @@
         :root {
             --background-color: #ffffff;
             --text-color: #000000;
-            --button-color: #757575;
+            --button-color: #000000;
         }
         @media (prefers-color-scheme: dark) {
             :root {
                 --background-color: #121212;
                 --text-color: #ffffff;
-                --button-color: #9e9e9e;
+                --button-color: #ffffff;
             }
         }
         body {
