--- a/article/cn/aaai.html
+++ b/article/cn/aaai.html
@@ -93,7 +93,7 @@
             <iframe
                 id="commentFrame"
                 class="comment-iframe"
-                src="https://comment.joyance.page/embed/area/test-1"
+                src="https://comment.joyance.page/embed/area/aaai"
                 frameborder="0"
                 allowtransparency="true">
             </iframe>
